hotfix: fix json-structure for returning orders list to user
